--- a/uygulama.html
+++ b/uygulama.html
@@ -1,7 +1,9 @@
+
 <html>
 <head>
-
-
+    <meta charset="UTF-8">
+    <title>AGADU|Adam Gibi Adamlar Destek Uygulaması</title>
+    
 </head>
 <body>
 <div>
@@ -14,12 +16,16 @@
 <input type="text" name="kullanıcı adı" id="tx1"> <br> <br>
 <label for="tx2">isim</label>
 <input type="text" name="isim" id="tx2"> <br> <br>
+<h5>cinsiyet</h5>
 <select name="cinsiyet" >
 <option value="cins1">erkek</option>
 <option value="cins2">erkek</option>
 </select> <br> <br>
+<h5>konum ve bilgi</h5>
+<textarea name="konum" cols="30" rows="10"></textarea> <br> <br>
 
-<button type="submit">giriş yap</button>
+<button type="submit" alert="155 ara">giriş yap</button>
+<p><em>Butona basmak bilgilerinizi konumunuza en yakın polis merkezine iletecektir.</em></p>
 </form>
 </div>
 
